fix for Java 8